# ulgl-embed

./: .gitignore  CMakeLists.txt  package.json
Assets/: Shader.vert
Assets_temp/: TextureShader.vert
Vendor_temp/glad/src/: glad.c
app/: .gitignore  README.md  app.js  components.json  index.html  package.json  tailwind.config.js  tsconfig.json
app/src/: App.tsx  NativeComponent.tsx  index.css  main.jsx
app/src/native/: NativeComponent.tsx  index.ts  types.d.ts  types.ts
assets/: Shader.frag  Shader.vert  TextureShader.frag  TextureShader.vert
scripts/: cmake_copy_dir.py  copy_html_if_exists.py  smart_copy.py
src/: Component.cpp  Component.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  InputEvent.cpp  InputEvent.h  JSBridge.cpp  JSBridge.h  Primitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UltralightRenderer.cpp  UltralightRenderer.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
